src/test/resources/syntax/invalid/method_name_missing_greater_than.unpick
unpick v3
target_method foo.Bar <init ()V